--- a/docker-compose.1.yml
+++ b/docker-compose.1.yml
@@ -2,26 +2,35 @@ version: '3'
 services:
     mongo-1-2:
         container_name: "mongo-1-2"
-        image: mongo:4.0.1
+        image: mongo:latest
         ports:
             - "30012:27017"
-        command: mongod --replSet rs1 --shardsvr --port 27017  --oplogSize 16 --noprealloc --smallfiles
+        volumes:
+            - ./configs:/etc/mongo
+            - ./data/mongo-1-2:/data/db
+        command: mongod --replSet rs1 --shardsvr --port 27017  --oplogSize 16 --noprealloc --smallfiles --config /etc/mongo/shard-server.conf
         restart: always
 
     mongo-1-3:
         container_name: "mongo-1-3"
-        image: mongo:4.0.1
+        image: mongo:latest
         ports:
             - "30013:27017"
-        command: mongod --replSet rs1 --shardsvr --port 27017  --oplogSize 16 --noprealloc --smallfiles
+        volumes:
+            - ./configs:/etc/mongo
+            - ./data/mongo-1-3:/data/db
+        command: mongod --replSet rs1 --shardsvr --port 27017  --oplogSize 16 --noprealloc --smallfiles --config /etc/mongo/shard-server.conf
         restart: always 
 
     mongo-1-1:
         container_name: "mongo-1-1"
-        image: mongo:4.0.1
+        image: mongo:latest
         ports:
             - "30011:27017"
-        command: mongod --replSet rs1 --shardsvr --port 27017  --oplogSize 16 --noprealloc --smallfiles
+        volumes:
+            - ./configs:/etc/mongo
+            - ./data/mongo-1-1:/data/db
+        command: mongod --replSet rs1 --shardsvr --port 27017  --oplogSize 16 --noprealloc --smallfiles --config /etc/mongo/shard-server.conf
         links:
             - mongo-1-2:mongo-1-2
             - mongo-1-3:mongo-1-3
@@ -29,7 +38,7 @@ services:
 
     mongo-rs1-setup:
         container_name: "mongo-rs1-setup"
-        image: mongo:4.0.1
+        image: mongo:latest
         depends_on:
             - "mongo-1-1"
             - "mongo-1-2"
@@ -45,6 +54,9 @@ services:
             - MONGO2=mongo-1-2
             - MONGO3=mongo-1-3
             - RS=rs1
+            - MONGO_INITDB_ROOT_USERNAME=root
+            - MONGO_INITDB_ROOT_PASSWORD=root
+            - MONGO_INITDB=admin
         entrypoint: [ "/scripts/setup.sh" ]
 
         
