--- a/docker-compose.shard.yml
+++ b/docker-compose.shard.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
     mongo-router:
         container_name: "mongo-router"
-        image: mongo:4.0.1
+        image: mongo:latest
         ports:
             - "30001:27017"
         depends_on:
@@ -19,12 +19,14 @@ services:
             - mongo-2-1:mongo-2-1
             - mongo-2-2:mongo-2-2
             - mongo-2-3:mongo-2-3
-        command: mongos --configdb cnf-serv/mongo-cnf-1:27017,mongo-cnf-2:27017,mongo-cnf-3:27017 --port 27017 --bind_ip 0.0.0.0
+        volumes:
+              - ./configs:/etc/mongo
+        command: mongos --configdb cnf-serv/mongo-cnf-1:27017,mongo-cnf-2:27017,mongo-cnf-3:27017 --port 27017 --bind_ip 0.0.0.0 --config /etc/mongo/route-server.conf
         restart: always
 
     mongo-shard-setup:
         container_name: "mongo-shard-setup"
-        image: mongo:4.0.1
+        image: mongo:latest
         depends_on:
             - "mongo-router"
         links:
@@ -45,5 +47,8 @@ services:
             - PORT1=27017
             - PORT2=27017
             - PORT3=27017
+            - MONGO_INITDB_ROOT_USERNAME=root
+            - MONGO_INITDB_ROOT_PASSWORD=root
+            - MONGO_INITDB=admin
         entrypoint: [ "/scripts/init-shard.sh" ]
         restart: on-failure:20
